# agent_sql_query

./: README.md  main.py  pyproject.toml  requirements.txt
bd/: banco.sql  empresa.db
